syntax = "proto3";

enum Status {
    OK = 200;
    NOT_FOUNT = 404;
    UNAUTHORIZED = 406;
    INVALID_TOKEN = 497;
    ACCESS_TOKEN_EXPIRED = 498;
    INTERNAL_ERROR = 500;
}
